--- a/шаблон — направления-малышам-психолог.html
+++ b/шаблон — направления-малышам-психолог.html
@@ -251,7 +251,7 @@
                     </div>
                 </div>
                 <div class="uk-width-expand@m uk-padding-remove">
-                    <img src="https://cdn.nyutonika.ru/images/pages-napr/Group104.png" alt=""
+                    <img src="https://cdn.nyutonika.ru/images/pages-napr/Frame 276.png" alt=""
                         uk-scrollspy="cls: uk-animation-fade; delay: 600">
                 </div>
             </section>
@@ -324,7 +324,7 @@
                         <div class="uk-flex-center uk-flex problems-img uk-first-column">
                             <img class="uk-scrollspy-inview"
                                 uk-scrollspy="cls: uk-animation-fade; delay: 500; repeat: false"
-                                src="https://cdn.nyutonika.ru/images/pages-napr/Group104.png" alt="">
+                                src="https://cdn.nyutonika.ru/images/pages-napr/Frame 277.png" alt="">
                         </div>
                         <div class="efficiency efficiency-malisham efficiency_rus-nach">
                             <ul>
@@ -354,7 +354,7 @@
                 </section>
                 <section class="uk-flex-between one-section uk-margin-large-bottom" uk-grid>
                     <div class="uk-width-expand@m">
-                        <img src="https://cdn.nyutonika.ru/images/pages-napr/Group104.png" alt=""
+                        <img src="https://cdn.nyutonika.ru/images/pages-napr/Frame 278.png" alt=""
                             uk-scrollspy="cls: uk-animation-fade; delay: 600">
                     </div>
                     <div class="uk-width-1-2@m uk-flex uk-flex-middle">
@@ -391,13 +391,13 @@
                         </div>
                     </div>
                     <div class="uk-width-expand@m">
-                        <img src="https://cdn.nyutonika.ru/images/pages-napr/Group104.png" alt=""
+                        <img src="https://cdn.nyutonika.ru/images/pages-napr/Frame 279.png" alt=""
                             uk-scrollspy="cls: uk-animation-fade; delay: 600">
                     </div>
                 </section>
                 <section class="uk-flex-between one-section uk-margin-large-bottom" uk-grid>
                     <div class="uk-width-expand@m">
-                        <img src="https://cdn.nyutonika.ru/images/pages-napr/Group104.png" alt=""
+                        <img src="https://cdn.nyutonika.ru/images/pages-napr/Frame 280.png" alt=""
                             uk-scrollspy="cls: uk-animation-fade; delay: 600">
                     </div>
                     <div class="uk-width-1-2@m uk-flex uk-flex-middle">
@@ -428,13 +428,13 @@
                         </div>
                     </div>
                     <div class="uk-width-expand@m">
-                        <img src="https://cdn.nyutonika.ru/images/pages-napr/Group104.png" alt=""
+                        <img src="https://cdn.nyutonika.ru/images/pages-napr/Frame 281.png" alt=""
                             uk-scrollspy="cls: uk-animation-fade; delay: 600">
                     </div>
                 </section>
                 <section class="uk-flex-between one-section uk-margin-large-bottom" uk-grid>
                     <div class="uk-width-expand@m">
-                        <img src="https://cdn.nyutonika.ru/images/pages-napr/Group104.png" alt=""
+                        <img src="https://cdn.nyutonika.ru/images/pages-napr/Frame 282.png" alt=""
                             uk-scrollspy="cls: uk-animation-fade; delay: 600">
                     </div>
                     <div class="uk-width-1-2@m uk-flex uk-flex-middle">
@@ -471,7 +471,7 @@
                         </div>
                     </div>
                     <div class="uk-width-expand@m">
-                        <img src="https://cdn.nyutonika.ru/images/pages-napr/Group104.png" alt=""
+                        <img src="https://cdn.nyutonika.ru/images/pages-napr/Frame 283.png" alt=""
                             uk-scrollspy="cls: uk-animation-fade; delay: 600">
                     </div>
                 </section>
@@ -499,7 +499,10 @@
                     </p>
                 </section>
                  
-
+                <div class="uk-width-expand@m uk-padding-large">
+                    <img src="https://cdn.nyutonika.ru/images/pages-napr/Frame 285.png" alt=""
+                        uk-scrollspy="cls: uk-animation-fade; delay: 600">
+                </div>
             </div>
 
         </div>
