--- a/шаблон — направления-средняя-школа-информатика.html
+++ b/шаблон — направления-средняя-школа-информатика.html
@@ -228,11 +228,6 @@
 
 
 
-
-
-
-
-
         <h1 class="h1-napravlenia napravlenia_nach napravlenia_srshk"
             uk-scrollspy="cls: uk-animation-slide-bottom; delay: 300">
             Информатика средняя школа
@@ -257,7 +252,7 @@
                     </div>
                 </div>
                 <div class="uk-width-expand@m uk-padding-remove">
-                    <img src="https://cdn.nyutonika.ru/images/pages-napr/Group104.png" alt=""
+                    <img src="https://cdn.nyutonika.ru/images/pages-napr/Frame 286.png" alt=""
                         uk-scrollspy="cls: uk-animation-fade; delay: 600">
                 </div>
             </section>
@@ -271,7 +266,7 @@
                 <div alt="" class="elevn-section-img4 icons-radius icons-style" src=" ">
                 </div>
                 <div class="nine-section-img1 icons-shadow icons-style" tabindex="0">
-                    <img alt="" class="" src="https://cdn.nyutonika.ru/icons/циркуль.png">
+                    <img alt="" class="" src="https://cdn.nyutonika.ru/icons/inform2.svg">
                 </div>
                 <div class="nine-section-img6 icons-block  icons-style" tabindex="0">
                     <img alt="" class="" src="https://cdn.nyutonika.ru/icons/graph.svg">
@@ -326,7 +321,7 @@
                         </h4>
                         <div class="efficiency-srscola_angl">
                             <div>
-                                <img src="https://cdn.nyutonika.ru/images/pages-napr/Group104.png" alt=""
+                                <img src="https://cdn.nyutonika.ru/images/pages-napr/Frame 287.png" alt=""
                                     uk-scrollspy="cls: uk-animation-fade; delay: 600"
                                     class="uk-scrollspy-inview uk-padding-large">
                             </div>
@@ -337,7 +332,7 @@
                 <section class="nine-section-dop-icons uk-scrollspy-inview "
                     uk-scrollspy="cls: uk-animation-fade; delay: 600">
                     <div class="nine-section-img5 icons-shadow  icons-style" tabindex="0">
-                        <img alt="" class="" src="https://cdn.nyutonika.ru/icons/спектр.png">
+                        <img alt="" class="" src="https://cdn.nyutonika.ru/icons/inform3.svg">
                     </div>
                 </section>
 
@@ -355,7 +350,7 @@
 
                     <section class="uk-flex-between one-section uk-padding uk-margin-large-bottom uk-grid" uk-grid="">
                         <div class="uk-width-expand@m uk-margin uk-first-column">
-                            <img src="https://cdn.nyutonika.ru/images/pages-napr/Group104.png" alt=""
+                            <img src="https://cdn.nyutonika.ru/images/pages-napr/Frame 288.png" alt=""
                                 uk-scrollspy="cls: uk-animation-fade; delay: 600" class="uk-scrollspy-inview ">
                         </div>
                         <div class="uk-width-1-2@m uk-flex uk-flex-middle">
@@ -396,13 +391,13 @@
                             </div>
                         </div>
                         <div class="uk-width-expand@m   uk-margin">
-                            <img src="https://cdn.nyutonika.ru/images/pages-napr/Group104.png" alt=""
+                            <img src="https://cdn.nyutonika.ru/images/pages-napr/Frame 290.png" alt=""
                                 uk-scrollspy="cls: uk-animation-fade; delay: 600" class="uk-scrollspy-inview ">
                         </div>
                     </section>
                     <section class="uk-flex-between one-section uk-padding uk-margin-large-bottom uk-grid" uk-grid="">
                         <div class="uk-width-expand@m uk-margin uk-first-column">
-                            <img src="https://cdn.nyutonika.ru/images/pages-napr/Group104.png" alt=""
+                            <img src="https://cdn.nyutonika.ru/images/pages-napr/Frame 289.png" alt=""
                                 uk-scrollspy="cls: uk-animation-fade; delay: 600" class="uk-scrollspy-inview ">
                         </div>
                         <div class="uk-width-1-2@m uk-flex uk-flex-middle">
@@ -421,6 +416,12 @@
                             </div>
                         </div>
                     </section>
+                    <section class="nine-section-dop-icons uk-scrollspy-inview "
+                        uk-scrollspy="cls: uk-animation-fade; delay: 600">
+                        <div class="elevn-section-img3 color16 icons-shadow icons-style" tabindex="0">
+                            <img alt="" class="" src="https://cdn.nyutonika.ru/icons/inform3.svg">
+                        </div>
+                    </section>
                     <section class="uk-flex-between one-section uk-padding uk-margin-top uk-margin-bottom uk-grid"
                         uk-grid="">
                         <div class="uk-width-1-2@m uk-flex uk-flex-middle uk-first-column">
@@ -437,7 +438,7 @@
                             </div>
                         </div>
                         <div class="uk-width-expand@m   uk-margin">
-                            <img src="https://cdn.nyutonika.ru/images/pages-napr/Group104.png" alt=""
+                            <img src="https://cdn.nyutonika.ru/images/pages-napr/Frame 291.png" alt=""
                                 uk-scrollspy="cls: uk-animation-fade; delay: 600" class="uk-scrollspy-inview ">
                         </div>
                     </section>
@@ -449,12 +450,7 @@
 
         <div class="problems problems-srscola color16">
             <div class="container">
-                <section class="nine-section-dop-icons uk-scrollspy-inview "
-                    uk-scrollspy="cls: uk-animation-fade; delay: 600">
-                    <div class="elevn-section-img3 color16 icons-shadow icons-style" tabindex="0">
-                        <img alt="" class="" src="https://cdn.nyutonika.ru/icons/symbol.svg">
-                    </div>
-                </section>
+
                 <section class="container-item">
                     <h4 class="uk-text-center title-trend-block uk-scrollspy-inview "
                         uk-scrollspy="cls: uk-animation-slide-bottom; delay: 300">Мы знаем, что вам нужно!
@@ -476,7 +472,7 @@
                         <div class="uk-flex-center uk-flex uk-padding problems-img uk-first-column">
                             <img class="uk-scrollspy-inview  "
                                 uk-scrollspy="cls: uk-animation-fade; delay: 500; repeat: false"
-                                src="https://cdn.nyutonika.ru/images/pages-napr/Group104.png" alt="">
+                                src="https://cdn.nyutonika.ru/images/pages-napr/Frame 292.png" alt="">
                         </div>
                     </div>
                     <h4 class="uk-text-center title-trend-block uk-scrollspy-inview uk-margin-large-top"
@@ -488,7 +484,7 @@
                         <div class="uk-flex-center uk-flex  problems-img uk-padding uk-first-column">
                             <img class="uk-scrollspy-inview "
                                 uk-scrollspy="cls: uk-animation-fade; delay: 500; repeat: false"
-                                src="https://cdn.nyutonika.ru/images/pages-napr/Group104.png" alt="">
+                                src="https://cdn.nyutonika.ru/images/pages-napr/Frame 293.png" alt="">
                         </div>
                         <div class="efficiency efficiency-srscola">
                             <ul>
@@ -521,7 +517,7 @@
                         <div class="uk-flex-center uk-flex uk-padding problems-img uk-first-column">
                             <img class="uk-scrollspy-inview  "
                                 uk-scrollspy="cls: uk-animation-fade; delay: 500; repeat: false"
-                                src="https://cdn.nyutonika.ru/images/pages-napr/Group104.png" alt="">
+                                src="https://cdn.nyutonika.ru/images/pages-napr/Frame 294.png" alt="">
                         </div>
                     </div>
                 </section>
@@ -741,11 +737,13 @@
                     <div class="text-trend-block">
                     </div>
                     <div class="form-trend-list">
-                        <div><span class="color1"></span>прислушиваемся к мнению ученика,<br> создаем индивидуальную программу занятий
+                        <div><span class="color1"></span>прислушиваемся к мнению ученика,<br> создаем индивидуальную
+                            программу занятий
                         </div>
                         <div><span class="color2"></span>заряжаем мотивацией<br> и хорошим настроением
                         </div>
-                        <div><span class="color3"></span>гарантируем эффективность,<br>орошие оценки не заставят долго ждать
+                        <div><span class="color3"></span>гарантируем эффективность,<br>хорошие оценки не заставят долго
+                            ждать
                         </div>
 
                     </div>
