--- a/шаблон — направления-средняя-школа-география.html
+++ b/шаблон — направления-средняя-школа-география.html
@@ -257,7 +257,7 @@
                     </div>
                 </div>
                 <div class="uk-width-expand@m uk-padding-remove">
-                    <img src="https://cdn.nyutonika.ru/images/pages-napr/Group104.png" alt=""
+                    <img src="https://cdn.nyutonika.ru/images/pages-napr/Frame 295.png" alt=""
                         uk-scrollspy="cls: uk-animation-fade; delay: 600">
                 </div>
             </section>
@@ -271,7 +271,7 @@
                 <div alt="" class="elevn-section-img4 icons-radius icons-style color9" src=" ">
                 </div>
                 <div class="nine-section-img1 icons-shadow icons-style" tabindex="0">
-                    <img alt="" class="" src="https://cdn.nyutonika.ru/icons/молекула-11.svg">
+                    <img alt="" class="" src="https://cdn.nyutonika.ru/icons/глобус.svg">
                 </div>
                 <div class="nine-section-img6 icons-block  icons-style" tabindex="0">
                     <img alt="" class="" src="https://cdn.nyutonika.ru/icons/graph.svg">
@@ -323,13 +323,16 @@
                         <h4 class="uk-scrollspy-inview uk-text-center"
                             uk-scrollspy="cls: uk-animation-slide-bottom; delay: 400">
                             Отправляясь в путешествие, мы первым делом смотрим на карту, сопоставляем расстояние от дома
-                            до финального пункта назначения, выстраиваем маршрут. Оцениваем географическое положение
-                            выбранной точки. Подготовка подходящей одежды, разработка удобного маршрута - все это
+                            до финального пункта назначения, выстраиваем маршрут. <br>
+                            Оцениваем географическое положение
+                            выбранной точки.<br>
+                            Подготовка подходящей одежды, разработка удобного маршрута - все это
                             невозможно без знания географии.
                         </h4>
                         <div class="icons-block  uk-scrollspy-inview uk-flex uk-flex-center"
                             uk-scrollspy="cls: uk-animation-fade; delay: 600">
-                            <img alt="" class="" src="https://cdn.nyutonika.ru/images/pages-napr/Group104.png">
+                            <img alt="" class="uk-padding-large"
+                                src="https://cdn.nyutonika.ru/images/pages-napr/Frame 296.png">
                         </div>
 
                     </div>
@@ -345,7 +348,7 @@
                 <section class="nine-section-dop-icons uk-scrollspy-inview "
                     uk-scrollspy="cls: uk-animation-fade; delay: 600">
                     <div class="nine-section-img5 icons-block  icons-style" tabindex="0">
-                        <img alt="" class="" src="https://cdn.nyutonika.ru/icons/молекула-10.svg">
+                        <img alt="" class="" src="https://cdn.nyutonika.ru/icons/гора.svg">
                     </div>
                 </section>
                 <section class="uk-padding-large">
@@ -371,8 +374,8 @@
                             </div>
                         </div>
                     </div>
-                    <div class="uk-width-expand@m uk-margin uk-first-column">
-                        <img alt="" class="" src="https://cdn.nyutonika.ru/images/pages-napr/Group104.png">
+                    <div class="uk-width-expand@m  uk-first-column">
+                        <img alt="" class="" src="https://cdn.nyutonika.ru/images/pages-napr/Frame 297.png">
                     </div>
                 </section>
             </div>
@@ -549,10 +552,11 @@
 
         <div class="problems problems-srscola">
             <div class="container">
-                 
+
                 <section class="uk-flex-between one-section   uk-grid" uk-grid="">
                     <div class="uk-width-1-2@m uk-flex uk-flex-middle uk-first-column">
-                        <div class="banner-content uk-scrollspy-inview " uk-scrollspy="cls: uk-animation-slide-bottom; delay: 600">
+                        <div class="banner-content uk-scrollspy-inview "
+                            uk-scrollspy="cls: uk-animation-slide-bottom; delay: 600">
                             <h4>Прогнозы погоды</h4>
                             <div class="h1-banner-text uk-padding napravlenia_textblock_2">
                                 всегда знаем, когда нужно взять с собой зонтик
@@ -560,15 +564,18 @@
                         </div>
                     </div>
                     <div class="uk-width-expand@m  ">
-                        <img src="https://cdn.nyutonika.ru/images/pages-napr/Group104.png" alt="" uk-scrollspy="cls: uk-animation-fade; delay: 600" class="uk-scrollspy-inview "  >
+                        <img src="https://cdn.nyutonika.ru/images/pages-napr/Frame 301.png" alt=""
+                            uk-scrollspy="cls: uk-animation-fade; delay: 600" class="uk-scrollspy-inview ">
                     </div>
                 </section>
-                <section class="uk-flex-between one-section   uk-grid" uk-grid="">
+                <section class="uk-flex-between one-section uk-flex-wrap-reverse  uk-grid" uk-grid="">
                     <div class="uk-width-expand@m   uk-first-column">
-                        <img src="https://cdn.nyutonika.ru/images/pages-napr/Group104.png" alt="" uk-scrollspy="cls: uk-animation-fade; delay: 600" class="uk-scrollspy-inview "  >
+                        <img src="https://cdn.nyutonika.ru/images/pages-napr/Frame 302.png" alt=""
+                            uk-scrollspy="cls: uk-animation-fade; delay: 600" class="uk-scrollspy-inview ">
                     </div>
                     <div class="uk-width-1-2@m   uk-flex uk-flex-middle">
-                        <div class="banner-content uk-scrollspy-inview " uk-scrollspy="cls: uk-animation-slide-bottom; delay: 600">
+                        <div class="banner-content uk-scrollspy-inview "
+                            uk-scrollspy="cls: uk-animation-slide-bottom; delay: 600">
                             <h4>Онлайн-карты</h4>
                             <div class="h1-banner-text uk-padding napravlenia_textblock_2">
                                 экономим время, выбирая самые короткие маршруты
@@ -578,14 +585,18 @@
                 </section>
                 <section class="uk-flex-between one-section   uk-grid" uk-grid="">
                     <div class="uk-width-1-2@m uk-flex uk-flex-middle uk-first-column">
-                        <div class="banner-content uk-scrollspy-inview " uk-scrollspy="cls: uk-animation-slide-bottom; delay: 600">
+                        <div class="banner-content uk-scrollspy-inview "
+                            uk-scrollspy="cls: uk-animation-slide-bottom; delay: 600">
                             <h4>Путешествия и прогулки</h4>
                             <div class="h1-banner-text uk-padding napravlenia_textblock_2">
-                               планируем поездки с умом
+                                планируем поездки с умом
                             </div>
                         </div>
                     </div>
-                    
+                    <div class="uk-width-expand@m  ">
+                        <img src="https://cdn.nyutonika.ru/images/pages-napr/Frame 300.png" alt=""
+                            uk-scrollspy="cls: uk-animation-fade; delay: 600" class="uk-scrollspy-inview ">
+                    </div>
                 </section>
             </div>
         </div>
@@ -601,7 +612,9 @@
 
                     <div class="teacher-text-trend teacher-text-trend_napravlenia"
                         uk-scrollspy="cls: uk-animation-slide-bottom; delay: 400">
-                        Все репетиторы школы 1 раз в год повышают квалификацию в Международном институте развития образования и получают соответствующие документы. Уроки разрабатываются и проводятся в соответствии с требованиями ФГОС.
+                        Все репетиторы школы 1 раз в год повышают квалификацию в Международном институте развития
+                        образования и получают соответствующие документы. Уроки разрабатываются и проводятся в
+                        соответствии с требованиями ФГОС.
                     </div>
 
                     <div uk-slider="autoplay: true; autoplay-interval: 5000"
@@ -799,9 +812,11 @@
                     <div class="form-trend-list">
                         <div><span class="color1"></span>ценим время,<br> работаем системно и продуктивно
                         </div>
-                        <div><span class="color2"></span>креативно и легко мотивируем учиться<br>с помощью игр и экспериментов
+                        <div><span class="color2"></span>креативно и легко мотивируем учиться<br>с помощью игр и
+                            экспериментов
                         </div>
-                        <div><span class="color3"></span>удобно = эффективно,<br>в домашней обстановке проще сосредоточиться
+                        <div><span class="color3"></span>удобно = эффективно,<br>в домашней обстановке проще
+                            сосредоточиться
                         </div>
 
                     </div>
