--- a/шаблон — направления-средняя-школа-география.html
+++ b/шаблон — направления-средняя-школа-география.html
@@ -395,7 +395,7 @@
                         <div class="uk-flex-center uk-flex uk-padding problems-img uk-grid-margin uk-first-column">
                             <img class="uk-scrollspy-inview "
                                 uk-scrollspy="cls: uk-animation-fade; delay: 500; repeat: false"
-                                src="https://cdn.nyutonika.ru/images/pages-napr/Group104.png" alt="">
+                                src="https://cdn.nyutonika.ru/images/pages-napr/Frame 303.png" alt="">
                         </div>
                         <div class="efficiency efficiency-srscola uk-first-column">
                             <ul>
@@ -435,7 +435,7 @@
                         <div class="uk-flex-center uk-flex uk-padding problems-img uk-grid-margin uk-first-column">
                             <img class="uk-scrollspy-inview "
                                 uk-scrollspy="cls: uk-animation-fade; delay: 500; repeat: false"
-                                src="https://cdn.nyutonika.ru/images/pages-napr/Group104.png" alt="">
+                                src="https://cdn.nyutonika.ru/images/pages-napr/Frame 304.png" alt="">
                         </div>
                     </div>
                     <div class="uk-child-width-1-2@l uk-child-width-1-2@m uk-padding-top uk-flex-between@l uk-flex-middle uk-flex-center uk-flex-wrap uk-grid-medium uk-grid uk-grid-stack"
@@ -443,7 +443,7 @@
                         <div class="uk-flex-center uk-flex uk-padding problems-img uk-grid-margin uk-first-column">
                             <img class="uk-scrollspy-inview "
                                 uk-scrollspy="cls: uk-animation-fade; delay: 500; repeat: false"
-                                src="https://cdn.nyutonika.ru/images/pages-napr/Group104.png" alt="">
+                                src="https://cdn.nyutonika.ru/images/pages-napr/Frame 305.png" alt="">
                         </div>
                         <div class="efficiency efficiency-srscola uk-first-column">
                             <ul>
@@ -490,7 +490,7 @@
                 <!-- 1 секция  баннер и текст-->
                 <section class="uk-flex-between one-section uk-padding uk-margin-large-bottom" uk-grid>
                     <div class="uk-width-expand@m uk-margin">
-                        <img src="https://cdn.nyutonika.ru/images/pages-napr/Group104.png" alt=""
+                        <img src="https://cdn.nyutonika.ru/images/pages-napr/Frame 306.png" alt=""
                             uk-scrollspy="cls: uk-animation-fade; delay: 600">
                     </div>
                     <div class="uk-width-1-2@m uk-flex uk-flex-middle">
@@ -524,7 +524,7 @@
                         </div>
                     </div>
                     <div class="uk-width-expand@m   uk-margin">
-                        <img src="https://cdn.nyutonika.ru/images/pages-napr/Group104.png" alt=""
+                        <img src="https://cdn.nyutonika.ru/images/pages-napr/Frame 307.png" alt=""
                             uk-scrollspy="cls: uk-animation-fade; delay: 600">
                     </div>
                 </section>
