Немецкий средняя школа 2

--- a/шаблон — направления-средняя-школа-немецкий-язык.html
+++ b/шаблон — направления-средняя-школа-немецкий-язык.html
@@ -250,7 +250,7 @@
                     </div>
                 </div>
                 <div class="uk-width-expand@m uk-padding-remove">
-                    <img src="https://cdn.nyutonika.ru/images/pages-napr/Group104.png" alt=""
+                    <img src="https://cdn.nyutonika.ru/images/pages-napr/Frame 308.png" alt=""
                         uk-scrollspy="cls: uk-animation-fade; delay: 600">
                 </div>
             </section>
@@ -265,7 +265,7 @@
                 <div alt="" class="five-section-img4 icons-radius icons-style" src=" ">
                 </div>
                 <div class="two-section-img7 icons-block icons-style">
-                    <img alt="" class="" src="https://cdn.nyutonika.ru/icons/ .svg">
+                    <img alt="" class="" src="https://cdn.nyutonika.ru/icons/немецкий-башня.svg">
                 </div>
 
 
@@ -348,7 +348,7 @@
                         Что же делать, чтобы не скатиться на тройки?
                     </h4>
                     <div class="uk-width-expand@m uk-margin">
-                        <img src="https://cdn.nyutonika.ru/images/pages-napr/Group104.png" alt=""
+                        <img src="https://cdn.nyutonika.ru/images/pages-napr/Frame 309.png" alt=""
                             class="uk-padding-large" uk-scrollspy="cls: uk-animation-fade; delay: 600">
 
                     </div>
@@ -376,7 +376,7 @@
                         <div class="uk-flex-center uk-flex uk-padding problems-img uk-first-column">
                             <img class="uk-scrollspy-inview"
                                 uk-scrollspy="cls: uk-animation-fade; delay: 500; repeat: false"
-                                src="https://cdn.nyutonika.ru/images/pages-napr/Group104.png" alt="">
+                                src="https://cdn.nyutonika.ru/images/pages-napr/Frame 310.png" alt="">
                         </div>
                         <div class="efficiency efficiency-srscola">
                             <ul class="">
@@ -407,7 +407,7 @@
             <!-- 1 секция  баннер и текст-->
             <section class="uk-flex-between one-section uk-padding uk-margin-large-bottom" uk-grid>
                 <div class="uk-width-expand@m uk-margin">
-                    <img src="https://cdn.nyutonika.ru/images/pages-napr/Group104.png" alt=""
+                    <img src="https://cdn.nyutonika.ru/images/pages-napr/Frame 311.png" alt=""
                         uk-scrollspy="cls: uk-animation-fade; delay: 600">
                 </div>
                 <div class="uk-width-1-2@m uk-flex uk-flex-middle">
