Немецкий средняя школа 3

--- a/шаблон — направления-средняя-школа-немецкий-язык.html
+++ b/шаблон — направления-средняя-школа-немецкий-язык.html
@@ -459,7 +459,7 @@
                     </div>
                 </div>
                 <div class="uk-width-expand@m   uk-margin">
-                    <img src="https://cdn.nyutonika.ru/images/pages-napr/Group104.png" alt=""
+                    <img src="https://cdn.nyutonika.ru/images/pages-napr/Frame 312.png" alt=""
                         uk-scrollspy="cls: uk-animation-fade; delay: 600">
                 </div>
             </section>
@@ -470,7 +470,7 @@
             <!-- 1 секция  баннер и текст-->
             <section class="uk-flex-between one-section uk-padding uk-margin-large-bottom" uk-grid>
                 <div class="uk-width-expand@m uk-margin">
-                    <img src="https://cdn.nyutonika.ru/images/pages-napr/Group104.png" alt=""
+                    <img src="https://cdn.nyutonika.ru/images/pages-napr/Frame 313.png" alt=""
                         uk-scrollspy="cls: uk-animation-fade; delay: 600">
                 </div>
                 <div class="uk-width-1-2@m uk-flex uk-flex-middle">
@@ -516,7 +516,7 @@
                     </div>
                 </div>
                 <div class="uk-width-expand@m   uk-margin">
-                    <img src="https://cdn.nyutonika.ru/images/pages-napr/Group104.png" alt=""
+                    <img src="https://cdn.nyutonika.ru/images/pages-napr/Frame 314.png" alt=""
                         uk-scrollspy="cls: uk-animation-fade; delay: 600">
                 </div>
             </section>
@@ -527,7 +527,7 @@
             <!-- 1 секция  баннер и текст-->
             <section class="uk-flex-between one-section uk-padding uk-margin-large-bottom" uk-grid>
                 <div class="uk-width-expand@m uk-margin">
-                    <img src="https://cdn.nyutonika.ru/images/pages-napr/Group104.png" alt=""
+                    <img src="https://cdn.nyutonika.ru/images/pages-napr/Frame 315.png" alt=""
                         uk-scrollspy="cls: uk-animation-fade; delay: 600">
                 </div>
                 <div class="uk-width-1-2@m uk-flex uk-flex-middle">
@@ -573,7 +573,7 @@
                     </div>
                 </div>
                 <div class="uk-width-expand@m   uk-margin">
-                    <img src="https://cdn.nyutonika.ru/images/pages-napr/Group104.png" alt=""
+                    <img src="https://cdn.nyutonika.ru/images/pages-napr/Frame 316.png" alt=""
                         uk-scrollspy="cls: uk-animation-fade; delay: 600">
                 </div>
             </section>
@@ -792,10 +792,11 @@
                 <section class="container-item">
 
                     <h4 class="uk-text-center title-trend-block"
-                        uk-scrollspy="cls: uk-animation-slide-bottom; delay: 300">Превратим изучение немецкого в захватывающее приключение!
+                        uk-scrollspy="cls: uk-animation-slide-bottom; delay: 300">Превратим изучение немецкого в
+                        захватывающее приключение!
 
                     </h4>
-                    <div class="text-trend-block"> 
+                    <div class="text-trend-block">
                     </div>
                     <div class="form-trend-list">
                         <div><span class="color1"></span>поддерживаем интерес ученика к немецкому,
@@ -803,7 +804,8 @@
                         </div>
                         <div><span class="color2"></span>стимулируем рост успеваемости,<br>не загружая при этом ребенка
                         </div>
-                        <div><span class="color3"></span>используем самые эффективные методики <br> для быстрого прогресса
+                        <div><span class="color3"></span>используем самые эффективные методики <br> для быстрого
+                            прогресса
                         </div>
 
                     </div>
