Испанский 2 средняя школа

--- a/шаблон — направления-средняя-школа-испанский-язык.html
+++ b/шаблон — направления-средняя-школа-испанский-язык.html
@@ -247,10 +247,12 @@
                     <div class="banner-content" uk-scrollspy="cls: uk-animation-slide-bottom; delay: 600">
                         <div class="text-h2-napravlenia" uk-scrollspy="cls: uk-animation-slide-bottom; delay: 300">
                             О грамматике просто!
-                            <br>
-                            Красочная речь и отличное произношение!
                         </div>
                         <div class="text-h2-napravlenia">
+                            <div class="napravlenia_sr-schk_banner-text2">
+                                <p> <span>Красочная речь и отличное произношение!</span>
+                                </p>
+                            </div>
                         </div>
                     </div>
                 </div>
