Испанский средняя школа 4

--- a/шаблон — направления-средняя-школа-испанский-язык.html
+++ b/шаблон — направления-средняя-школа-испанский-язык.html
@@ -257,7 +257,7 @@
                     </div>
                 </div>
                 <div class="uk-width-expand@m uk-padding-remove">
-                    <img src="https://cdn.nyutonika.ru/images/pages-napr/Group104.png" alt=""
+                    <img src="https://cdn.nyutonika.ru/images/pages-napr/Frame 317.png" alt=""
                         uk-scrollspy="cls: uk-animation-fade; delay: 600">
                 </div>
             </section>
@@ -272,7 +272,7 @@
                 <div alt="" class="five-section-img4 icons-radius icons-style" src=" ">
                 </div>
                 <div class="two-section-img7 icons-block icons-style">
-                    <img alt="" class="" src="https://cdn.nyutonika.ru/icons/ .svg">
+                    <img alt="" class="" src="https://cdn.nyutonika.ru/icons/флаг-испания.svg">
                 </div>
 
 
@@ -341,7 +341,7 @@
                                 <li>для любого уровня знания испанского языка</li>
                             </ul>
                             <div>
-                                <img src="https://cdn.nyutonika.ru/images/pages-napr/Group104.png" alt=""
+                                <img src="https://cdn.nyutonika.ru/images/pages-napr/Frame 318.png" alt=""
                                     uk-scrollspy="cls: uk-animation-fade; delay: 600">
                             </div>
 
@@ -381,7 +381,7 @@
                         <div class="uk-flex-center uk-flex uk-padding problems-img uk-first-column">
                             <img class="uk-scrollspy-inview"
                                 uk-scrollspy="cls: uk-animation-fade; delay: 500; repeat: false"
-                                src="https://cdn.nyutonika.ru/images/pages-napr/Group104.png" alt="">
+                                src="https://cdn.nyutonika.ru/images/pages-napr/Frame 319.png" alt="">
                         </div>
                     </div>
                 </section>
@@ -415,12 +415,12 @@
                 <section class="nine-section-dop-icons uk-scrollspy-inview "
                     uk-scrollspy="cls: uk-animation-fade; delay: 600">
                     <div class="nine-section-img1 icons-shadow icons-style" tabindex="0">
-                        <img alt="" class="" src="https://cdn.nyutonika.ru/icons/.svg ">
+                        <img alt="" class="" src="https://cdn.nyutonika.ru/icons/гитара.svg ">
                     </div>
                     <div alt="" class="nine-section-img3 icons-radius icons-style" src="">
                     </div>
                     <div class="nine-section-img6 icons-block icons-style">
-                        <img alt="" class="" src="https://cdn.nyutonika.ru/icons/.svg ">
+                        <img alt="" class="" src="https://cdn.nyutonika.ru/icons/торреадор.svg ">
                     </div>
                 </section>
 
@@ -541,7 +541,7 @@
                 <section class="nine-section-dop-icons uk-scrollspy-inview "
                     uk-scrollspy="cls: uk-animation-fade; delay: 600">
                     <div class="nine-section-img1 icons-shadow icons-style" tabindex="0">
-                        <img alt="" class="" src="https://cdn.nyutonika.ru/icons/.svg ">
+                        <img alt="" class="" src="https://cdn.nyutonika.ru/icons/танец-испания.svg ">
                     </div>
                     <div alt="" class="nine-section-img3 icons-radius icons-style" src="">
                     </div>
