--- a/шаблон — направления-начальная школа - английский-язык.html
+++ b/шаблон — направления-начальная школа - английский-язык.html
@@ -542,6 +542,34 @@
                             </li>
                         </ul>
                     </div>
+                    <div class="item-circle-mobile">
+                        <ul>
+                            <li>
+                                <img alt="" class="" src="https://cdn.nyutonika.ru/images/pages-napr/Frame 191.png">
+                            </li>
+                            <li>
+                                <p class="efficiency-blok-img"><span class="color11 uk-margin"></span></p>
+                                Улучшение памяти
+
+                            </li>
+                            <li>
+                                <p class="efficiency-blok-img"><span class="color13 uk-margin"></span></p>
+                                Творчество
+
+                            </li>
+                            <li>
+                                <img alt="" class="" src="https://cdn.nyutonika.ru/images/pages-napr/Frame 193.png">
+                            </li>
+                            <li>
+                                <img alt="" class="" src="https://cdn.nyutonika.ru/images/pages-napr/Frame 193-2.png">
+                            </li>
+                            <li>
+                                <p class="efficiency-blok-img"><span class="color12 uk-margin"></span></p>
+                                Всестороннее развитие
+
+                            </li>
+                        </ul>
+                    </div>
                 </section>
             </div>
         </div>
