Испанский начальная школа 2

--- a/шаблон — направления-начальная школа - испанский-язык.html
+++ b/шаблон — направления-начальная школа - испанский-язык.html
@@ -227,20 +227,12 @@
         </header>
 
 
-
-
-
-
-
-
         <h1 class="h1-napravlenia napravlenia_nach napravlenia_nach_rus-nach"
             uk-scrollspy="cls: uk-animation-slide-bottom; delay: 300">
             Испанский язык 2-4 класс
         </h1>
 
-
         <div class="main container">
-
             <!-- 1 секция  баннер и текст-->
             <section class="container-item uk-flex-between one-section" uk-grid>
                 <div class="uk-width-1-2@m uk-padding-remove uk-flex uk-flex-middle">
@@ -256,7 +248,7 @@
                     </div>
                 </div>
                 <div class="uk-width-expand@m uk-padding-remove">
-                    <img src="https://cdn.nyutonika.ru/images/pages-napr/Group104.png" alt=""
+                    <img src="https://cdn.nyutonika.ru/images/pages-napr/Frame 323.png" alt=""
                         uk-scrollspy="cls: uk-animation-fade; delay: 600">
                 </div>
             </section>
@@ -271,7 +263,7 @@
                     <div alt="" class="elevn-section-img4 icons-radius icons-style color7" src=" ">
                     </div>
                     <div class="nine-section-img1 icons-shadow icons-style" tabindex="0">
-                        <img alt="" class="" src="https://cdn.nyutonika.ru/icons/кубВ.svg">
+                        <img alt="" class="" src="https://cdn.nyutonika.ru/icons/книги-исп.svg">
                     </div>
 
 
@@ -318,7 +310,7 @@
                         </div>
                         <div class="icons-block uk-scrollspy-inview uk-flex uk-flex-center uk-padding"
                             uk-scrollspy="cls: uk-animation-fade; delay: 600">
-                            <img alt="" class="" src="https://cdn.nyutonika.ru/images/pages-napr/Group104.png">
+                            <img alt="" class="" src="https://cdn.nyutonika.ru/images/pages-napr/Frame 324.png">
                         </div>
                     </div>
                 </section>
@@ -344,17 +336,14 @@
                     </p>
                     <div class="icons-block uk-scrollspy-inview uk-flex uk-flex-center uk-padding"
                         uk-scrollspy="cls: uk-animation-fade; delay: 600">
-                        <img alt="" class="" src="https://cdn.nyutonika.ru/images/pages-napr/Group104.png">
+                        <img alt="" class="" src="https://cdn.nyutonika.ru/images/pages-napr/Frame 325.png">
                     </div>
                     <p class="uk-text-center uk-scrollspy-inview uk-text-large uk-text-bold uk-margin-medium-bottom"
                         uk-scrollspy="cls: uk-animation-slide-bottom; delay: 400">
                         Благодаря простому произношению испанский зарекомендовал себя, как один из самых легких языков
                         для изучения в начальной школе, но так ли это на самом деле?
                     </p>
-                    <div class="icons-block uk-scrollspy-inview uk-flex uk-flex-center "
-                        uk-scrollspy="cls: uk-animation-fade; delay: 600">
-                        <img alt="" class="" src="https://cdn.nyutonika.ru/images/pages-napr/Group104.png">
-                    </div>
+
                 </section>
             </div>
         </div>
@@ -379,7 +368,7 @@
                         <div class="uk-flex-center uk-flex problems-img">
                             <img class="uk-scrollspy-inview "
                                 uk-scrollspy="cls: uk-animation-fade; delay: 500; repeat: false"
-                                src="https://cdn.nyutonika.ru/images/pages-napr/Group104.png" alt="">
+                                src="https://cdn.nyutonika.ru/images/pages-napr/Frame 326.png" alt="">
                         </div>
                     </div>
                 </section>
@@ -392,12 +381,12 @@
                 <section class="nine-section-dop-icons uk-scrollspy-inview uk-padding"
                     uk-scrollspy="cls: uk-animation-fade; delay: 600">
                     <div class="seven-section-img2 icons-block icons-style ">
-                        <img alt="" class="" src="https://cdn.nyutonika.ru/icons/книгаА.svg">
+                        <img alt="" class="" src="https://cdn.nyutonika.ru/icons/книги-исп.svg">
                     </div>
 
 
                     <div class="nine-section-img5 icons-block icons-style ">
-                        <img alt="" class="" src="https://cdn.nyutonika.ru/icons/кубА.svg">
+                        <img alt="" class="" src="https://cdn.nyutonika.ru/icons/карандаши-в-стакане.svg">
                     </div>
                 </section>
             </div>
@@ -457,15 +446,23 @@
                             контекста вызывают самую настоящую путаницу
                         </div>
                     </div>
+                    <div class="uk-flex-center napravlenia_textblock_block uk-margin-top">
+                        <div class="uk-flex-column uk-text-center napravlenia_textblock_3 uk-text-default">
+                            <img class="uk-scrollspy-inview "
+                                uk-scrollspy="cls: uk-animation-fade; delay: 500; repeat: false"
+                                src="https://cdn.nyutonika.ru/images/pages-napr/чашка-вопрос.svg" alt="">
+                        </div>
 
+
+                    </div>
                 </section>
                 <section class="nine-section-dop-icons uk-scrollspy-inview "
                     uk-scrollspy="cls: uk-animation-fade; delay: 600">
                     <div class="nine-section-img1 icons-shadow icons-style" tabindex="0">
-                        <img alt="" class="" src="https://cdn.nyutonika.ru/icons/кубС.svg">
+                        <img alt="" class="" src="https://cdn.nyutonika.ru/icons/перец.svg">
                     </div>
                     <div class="nine-section-img5 icons-block  icons-style" tabindex="0">
-                        <img alt="" class="" src="https://cdn.nyutonika.ru/icons/книга-облако.svg">
+                        <img alt="" class="" src="https://cdn.nyutonika.ru/icons/гитара-3.svg">
                     </div>
                 </section>
             </div>
@@ -491,27 +488,27 @@
                     <div class="item-circle">
                         <ul>
                             <li>
-                                <img alt="" class="" src="https://cdn.nyutonika.ru/images/pages-napr/Group104.png">
+                                <img alt="" class="" src="https://cdn.nyutonika.ru/icons/учебник-испаснкого.svg">
                             </li>
                             <li>
-                                <img alt="" class="" src="https://cdn.nyutonika.ru/images/pages-napr/Frame 193.png">
+                                <img alt="" class="" src="https://cdn.nyutonika.ru/icons/танец.svg">
                                 Радостная атмосфера
                             </li>
                             <li>
-                                <img alt="" class="" src="https://cdn.nyutonika.ru/images/pages-napr/Frame 193.png">
+                                <img alt="" class="" src="https://cdn.nyutonika.ru/icons/лимон-лайм.svg">
                                 Запоминающиеся примеры
                             </li>
                             <li>
-                                <img alt="" class="" src="https://cdn.nyutonika.ru/images/pages-napr/Frame 193.png">
+                                <img alt="" class="" src="https://cdn.nyutonika.ru/icons/гитара-2.svg">
                                 Интересная подача
                             </li>
                             <li>
-                                <img alt="" class="" src="https://cdn.nyutonika.ru/images/pages-napr/Frame 193-2.png">
+                                <img alt="" class="" src="https://cdn.nyutonika.ru/icons/маракасы.svg">
                                 Интерактивные и творческие задания
 
                             </li>
                             <li>
-                                <img alt="" class="" src="https://cdn.nyutonika.ru/images/pages-napr/Frame 193.png">
+                                <img alt="" class="" src="https://cdn.nyutonika.ru/icons/стакан-лайм.svg">
                                 Индивидуальный подход
                             </li>
                         </ul>
@@ -519,27 +516,27 @@
                     <div class="item-circle-mobile">
                         <ul>
                             <li>
-                                <img alt="" class="" src="https://cdn.nyutonika.ru/images/pages-napr/Group104.png">
+                                <img alt="" class="" src="https://cdn.nyutonika.ru/icons/учебник-испаснкого.svg">
                             </li>
                             <li>
-                                <img alt="" class="" src="https://cdn.nyutonika.ru/images/pages-napr/Frame 193.png">
+                                <img alt="" class="" src="https://cdn.nyutonika.ru/icons/танец.svg">
                                 Радостная атмосфера
                             </li>
                             <li>
-                                <img alt="" class="" src="https://cdn.nyutonika.ru/images/pages-napr/Frame 193.png">
+                                <img alt="" class="" src="https://cdn.nyutonika.ru/icons/лимон-лайм.svg">
                                 Запоминающиеся примеры
                             </li>
                             <li>
-                                <img alt="" class="" src="https://cdn.nyutonika.ru/images/pages-napr/Frame 193.png">
+                                <img alt="" class="" src="https://cdn.nyutonika.ru/icons/гитара-2.svg">
                                 Интересная подача
                             </li>
                             <li>
-                                <img alt="" class="" src="https://cdn.nyutonika.ru/images/pages-napr/Frame 193-2.png">
+                                <img alt="" class="" src="https://cdn.nyutonika.ru/icons/маракасы.svg">
                                 Интерактивные и творческие задания
 
                             </li>
                             <li>
-                                <img alt="" class="" src="https://cdn.nyutonika.ru/images/pages-napr/Frame 193.png">
+                                <img alt="" class="" src="https://cdn.nyutonika.ru/icons/стакан-лайм.svg">
                                 Индивидуальный подход
                             </li>
                         </ul>
@@ -572,16 +569,16 @@
                         <div class="uk-flex-center uk-flex problems-img">
                             <img class="uk-scrollspy-inview "
                                 uk-scrollspy="cls: uk-animation-fade; delay: 500; repeat: false"
-                                src="https://cdn.nyutonika.ru/images/pages-napr/Group104.png" alt="">
+                                src="https://cdn.nyutonika.ru/images/pages-napr/Frame 327.png" alt="">
                         </div>
                     </div>
                     <div class="uk-child-width-1-2@l uk-child-width-1-2@m uk-flex-between@l uk-flex-middle uk-flex-center uk-flex-wrap uk-grid-medium uk-grid"
                         uk-grid>
 
-                        <div class="uk-flex-center uk-flex problems-img">
+                        <div class="uk-flex-center uk-flex problems-img uk-margin-medium-top">
                             <img class="uk-scrollspy-inview "
                                 uk-scrollspy="cls: uk-animation-fade; delay: 500; repeat: false"
-                                src="https://cdn.nyutonika.ru/images/pages-napr/Group104.png" alt="">
+                                src="https://cdn.nyutonika.ru/images/pages-napr/Frame 328.png" alt="">
                         </div>
                         <div class="efficiency efficiency-nachscola uk-first-column">
                             <ul>
@@ -748,15 +745,18 @@
                 <section class="container-item">
 
                     <h4 class="uk-text-center title-trend-block"
-                        uk-scrollspy="cls: uk-animation-slide-bottom; delay: 300">Испанский на “отлично” <br>без стресса и зубрежки!
+                        uk-scrollspy="cls: uk-animation-slide-bottom; delay: 300">Испанский на “отлично” <br>без стресса
+                        и зубрежки!
 
                     </h4>
-                    <div class="text-trend-block"> 
+                    <div class="text-trend-block">
                     </div>
                     <div class="form-trend-list">
-                        <div><span class="color11"></span>совмещаем игры и учебу,<br>поэтому наши ученики с нетерпением ждут новых занятий
+                        <div><span class="color11"></span>совмещаем игры и учебу,<br>поэтому наши ученики с нетерпением
+                            ждут новых занятий
                         </div>
-                        <div><span class="color13"></span>догоним и опередим школьную программу,<br>при этом не перегружая ребенка
+                        <div><span class="color13"></span>догоним и опередим школьную программу,<br>при этом не
+                            перегружая ребенка
                         </div>
                         <div><span class="color14"></span>гибкий и комфортный темп обучения<br>для каждого
                         </div>
